jib追加