@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.4.5'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'com.google.cloud.tools.jib' version '3.0.0'
 }
 
 group = 'com.b1a9idps'
@@ -25,6 +26,20 @@ dependencies {
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+jib {
+    container {
+        ports ['8080']
+        jvmFlags = ['--enable-preview']
+    }
+    from {
+        image = 'openjdk:15-alpine'
+    }
+    to {
+        image = 'micrometer-prometheus-api'
+        tags = ['latest']
+    }
 }
 
 test {
